--- a/pages/11433.html
+++ b/pages/11433.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -899,27 +899,47 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>When formulating a <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theory of physics</a> in terms of <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> one typically models the range of certain physical quantities by <a class='existingWikiWord' href='/nlab/show/torsor'>torsors</a> over some <a class='existingWikiWord' href='/nlab/show/group'>group</a> of transformations.</p>
 
-<p>For instance a <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a> would be identified as element in the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> minus its origin, <math class='maruku-mathml' display='inline' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>−</mo><mo stretchy='false'>{</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}-\{0\}</annotation></semantics></math> , being a torsor over the <a class='existingWikiWord' href='/nlab/show/line+object'>multiplicative group</a> <math class='maruku-mathml' display='inline' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>×</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^\times</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>.</p>
+<p>For instance a <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a> would be identified as element in the <a class='existingWikiWord' href='/nlab/show/real+number'>real line</a> minus its origin, <math class='maruku-mathml' display='inline' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>−</mo><mo stretchy='false'>{</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}-\{0\}</annotation></semantics></math> , being a torsor over the <a class='existingWikiWord' href='/nlab/show/line+object'>multiplicative group</a> <math class='maruku-mathml' display='inline' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>×</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^\times</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>.</p>
 
 <p>In order for the “<a class='existingWikiWord' href='/nlab/show/coordination'>coordination</a>” of the mathematical theory with physical <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to take place, one needs to choose an identification of this abstract torsor with the (idealized) one that it is supposed to model in nature. Such a choice is equivalent to a choice of <a class='existingWikiWord' href='/nlab/show/unit'>unit</a> (in the mathematical sense), hence a choice of element of the torsor. In this context this is then a <em>physical unit</em>.</p>
 
-<p>For instance picking an element in <math class='maruku-mathml' display='inline' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>−</mo><mo stretchy='false'>{</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}-\{0\}</annotation></semantics></math> and declaring this to be 1,650,763.73 wavelengths of the orange-red emission line in the electromagnetic spectrum of the krypton-86 atom in a vacuum means defining a <em>physical unit of length</em> (in this example: of the <a class='existingWikiWord' href='/nlab/show/meter'>meter</a>).</p>
+<p>For instance picking an element in <math class='maruku-mathml' display='inline' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>−</mo><mo stretchy='false'>{</mo><mn>0</mn><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\mathbb{R}-\{0\}</annotation></semantics></math> and declaring this to be 1,650,763.73 wavelengths of the orange-red emission line in the electromagnetic spectrum of the krypton-86 atom in a vacuum means defining a <em>physical unit of length</em> (in this example: of the <a class='existingWikiWord' href='/nlab/show/meter'>meter</a>).</p>
 
 <p>Physical units are often called <em>physical constants</em>. But by definition physical units are arbitrary choices made in the desciption of a physical system. Of course once made, one wants to keep these choices constant, such as to be useful.</p>
 
 <p>The actual <em>constants of nature</em> are instead quotients of physical units. For instance the <span class='newWikiWord'>fine structure constant<a href='/nlab/new/fine+structure+constant'>?</a></span> is the <a class='existingWikiWord' href='/nlab/show/quotient+object'>quotient</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi><mo>≔</mo><mfrac><mrow><msup><mi>e</mi> <mn>2</mn></msup></mrow><mrow><mo stretchy='false'>(</mo><mn>4</mn><mi>π</mi><msub><mi>ϵ</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mi>ℏ</mi><mi>c</mi></mrow></mfrac><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi><mo>≔</mo><mfrac><mrow><msup><mi>e</mi> <mn>2</mn></msup></mrow><mrow><mo stretchy='false'>(</mo><mn>4</mn><mi>π</mi><msub><mi>ϵ</mi> <mn>0</mn></msub><mo stretchy='false'>)</mo><mi>ℏ</mi><mi>c</mi></mrow></mfrac><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
   \alpha \coloneqq \frac{e^2}{ (4 \pi \epsilon_0) \hbar c} \in \mathbb{R}
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/electric+charge'>electric charge</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> expressed in physical units of charge (such as <span class='newWikiWord'>coulomb<a href='/nlab/new/coulomb'>?</a></span>s), <math class='maruku-mathml' display='inline' id='mathml_f2966da2e6cfc39550f786a0895de74c10b33bf1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> etc. The resulting quotient is then independent of any choices and is hence a <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a> characterizing nature independently of any conventions about how to parameterize it.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/electric+charge'>electric charge</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> expressed in physical units of charge (such as <span class='newWikiWord'>coulomb<a href='/nlab/new/coulomb'>?</a></span>s), <math class='maruku-mathml' display='inline' id='mathml_2fc4b674a7724d27113c85c22de9c6d41b51d6b1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> is <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> etc. The resulting quotient is then independent of any choices and is hence a <a class='existingWikiWord' href='/nlab/show/real+number'>real number</a> characterizing nature independently of any conventions about how to parameterize it.</p>
 
 <p>Notice that <em>choice of unit</em> is also called <em>choice of gauge</em>. This is indeed the same “<a class='existingWikiWord' href='/nlab/show/gauge'>gauge</a>” as in “<a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a>”, as it is how (<a href='gauge#Weyl23'>Weyl 23</a>) introduced the concept of gauge theory: as a theory in which the choice of unit of length may change along paths in space.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Compton+wavelength'>Compton wavelength</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -935,14 +955,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  6, 2015 17:21:52 
+  Revised on November  8, 2017 06:31:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (127.0.0.1)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/physical+unit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/physical+unit/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/physical+unit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/physical+unit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/physical+unit" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/physical+unit/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/physical+unit" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/physical+unit" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
