--- a/pages/18755.html
+++ b/pages/18755.html
@@ -902,17 +902,27 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For a <a class='existingWikiWord' href='/nlab/show/particle'>particle</a>/<a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_c60721bed32d44aa7eec24c55315fa7b9132d4c7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math>, its <em>Compton wavelength</em> is the <a class='existingWikiWord' href='/nlab/show/length'>length</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c60721bed32d44aa7eec24c55315fa7b9132d4c7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mi>ℏ</mi><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+<p>The <em>Compton wavelength</em> is a <a class='existingWikiWord' href='/nlab/show/physical+unit'>physical unit</a> that governs the <a class='existingWikiWord' href='/nlab/show/dispersion+relation'>dispersion relation</a>/<a class='existingWikiWord' href='/nlab/show/dispersion+relation'>energy-momentum relation</a> of <a class='existingWikiWord' href='/nlab/show/mass'>massive</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>.</p>
+
+<p>For a <a class='existingWikiWord' href='/nlab/show/particle'>particle</a>/<a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi></mrow><annotation encoding='application/x-tex'>m</annotation></semantics></math>, its <em>Compton wavelength</em> is the <a class='existingWikiWord' href='/nlab/show/length'>length</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mi>ℏ</mi><mrow><mi>m</mi><mi>c</mi></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
   \frac{\hbar}{m c}
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_c60721bed32d44aa7eec24c55315fa7b9132d4c7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> denotes the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a> and <math class='maruku-mathml' display='inline' id='mathml_c60721bed32d44aa7eec24c55315fa7b9132d4c7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> denotes <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>c</mi></mrow><annotation encoding='application/x-tex'>c</annotation></semantics></math> denotes the <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a> and <math class='maruku-mathml' display='inline' id='mathml_11b2625970d60101f948976778dc5c4a52f1cdbf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℏ</mi></mrow><annotation encoding='application/x-tex'>\hbar</annotation></semantics></math> denotes <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a>.</p>
+
+<p>The inverse of the Compton wavelength appears as the <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> term notably in the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> of the <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> or the <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -926,14 +936,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November  7, 2017 08:18:01 
+  Revised on November  8, 2017 06:33:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Compton+wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Compton+wavelength" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Compton+wavelength/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Compton+wavelength" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Compton+wavelength" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
