--- a/pages/18761.html
+++ b/pages/18761.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Dirac field in nLab
+      Dirac current in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Dirac field
+      Dirac current
   </h1>
 
 
@@ -557,84 +557,62 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#reference'>Reference</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, specifically in <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a>, a <em>Dirac field</em> is an <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagentially</a> charged and possibly <a class='existingWikiWord' href='/nlab/show/mass'>massive</a> a <em><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> field</em>.</p>
+<p>In the <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> of the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>, the <em>Dirac current</em> is a <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> whose interpretation is literally the current of the <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> that are the <a class='existingWikiWord' href='/nlab/show/particle'>quanta</a> of the Dirac field. Therefore the corresponding <a class='existingWikiWord' href='/nlab/show/charge'>charge</a> is <em>fermion number</em>. As such the Dirac current (or rather its chiral version) plays a key role for instance in <a class='existingWikiWord' href='/nlab/show/baryogenesis'>baryogenesis</a>.</p>
 
-<p>This includes <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, such as <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>, <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrinos</a> and <a class='existingWikiWord' href='/nlab/show/muon'>muons</a>, after the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a> has equipped them with <a class='existingWikiWord' href='/nlab/show/mass'>mass</a>.</p>
+<p>The Dirac current is the <a class='existingWikiWord' href='/nlab/show/conserved+current'>conserved current</a> which is associated via <a class='existingWikiWord' href='/nlab/show/Noether%27s+theorem'>Noether&#39;s theorem I</a> to the <a class='existingWikiWord' href='/nlab/show/symmetry+of+a+Lagrangian+density'>infinitesimal symmetry of the Lagrangian</a> given by multiplying the <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a> by a complex phase.</p>
 
-<p>Mathematically, the Dirac field is the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> whose <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> is a <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor bundle</a> with typical <a class='existingWikiWord' href='/nlab/show/fiber'>fiber</a> a <a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac representation</a> in <a class='existingWikiWord' href='/nlab/show/supergeometry'>odd super-degree</a> and whose <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a> is a <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a>.</p>
+<h2 id='definition'>Definition</h2>
 
-<p>Notice that there are other <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> which would not be called “Dirac fields”, such as those transforming in a <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana representation</a> or a <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl representation</a>, or for example the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> field which would be called a <em><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></em>.</p>
+<p>In the usual standard coordinates, the Dirac current is of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_02b98f7eefbada527af3e5e05e7e09d96aa75614_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>ψ</mi><mo>¯</mo></mover><msup><mi>γ</mi> <mi>μ</mi></msup><mi>ψ</mi><mspace width='thinmathspace'></mspace><msub><mi>ι</mi> <mrow><msub><mo>∂</mo> <mi>μ</mi></msub></mrow></msub><msub><mi>dvol</mi> <mi>Σ</mi></msub><mspace width='thickmathspace'></mspace><mo>∈</mo><mspace width='thickmathspace'></mspace><msup><mi>Ω</mi> <mrow><mi>p</mi><mo>,</mo><mn>0</mn></mrow></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \overline{\psi}\gamma^\mu \psi \, \iota_{\partial_\mu} dvol_\Sigma
+   \;\in\;
+   \Omega^{p,0}
+   \,.
+
+</annotation></semantics></math></div>
+<p>For details see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>geometry of physics -- A first idea of quantum field theory</a></em> <a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#DiracCurrent'>this example</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chiral+anomaly'>chiral anomaly</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dirac+conjugate'>Dirac conjugate</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Dirac+current'>Dirac current</a></p>
-</li>
-</ul>
-
-<h2 id='reference'>Reference</h2>
-
-<p>A concise collection of the details over <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> is in</p>
-
-<ul>
-<li id='DermisekI9'><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a>, <em>qft I-9</em>, 2009 (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-I-9-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekDiracField.pdf' title='pdf'>pdf</a>)</li>
-</ul>
-
-<p>with background on <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in</p>
-
-<ul>
-<li id='DermisekI8'><a class='existingWikiWord' href='/nlab/show/Radovan+Dermisek'>Radovan Dermisek</a> <em>qft I-8</em>, 2009 (<a href='http://www.physics.indiana.edu/~dermisek/QFT_09/qft-I-8-4p.pdf'>pdf</a>, <a class='existingWikiWord' href='/nlab/files/DermisekSpinorField.pdf' title='pdf'>pdf</a>)</li>
-</ul>
-
-<p>A textbook account in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
-
-<ul>
-<li id='Scharf95'>
-<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 2.2 of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</p>
-</li>
-
-<li id='Scharf01'>
-<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 1.8 of <em><a class='existingWikiWord' href='/nlab/show/Quantum+Gauge+Theories+--+A+True+Ghost+Story'>Quantum Gauge Theories -- A True Ghost Story</a></em>, Wiley 2001</p>
+<p><a class='existingWikiWord' href='/nlab/show/baryogenesis'>baryogenesis</a></p>
 </li>
 </ul>
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  8, 2017 13:50:43 
+  Created on November  8, 2017 13:59:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+field/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Dirac+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dirac+current" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Dirac+field" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Dirac+current" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Dirac+field" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Dirac+current" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Dirac+field" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Dirac+current" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
