--- a/pages/5989.html
+++ b/pages/5989.html
@@ -318,7 +318,7 @@ margin-left: 0em;
 <p>(Taken from <a href='http://www.math.rutgers.edu/newsletter/newsletter2003.html'>this website</a>)</p>
 </blockquote>
 
-<p>Myles Tierney died on October 6, 2017 having turned 80 in September. He made important contributions to category theory in collaboration with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Bill Lawvere</a> and with <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>.</p>
+<p>Myles Tierney died on October 5, 2017 having turned 80 in September. He made important contributions to category theory in collaboration with <a class='existingWikiWord' href='/nlab/show/William+Lawvere'>Bill Lawvere</a> and with <a class='existingWikiWord' href='/nlab/show/Andre+Joyal'>André Joyal</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -353,14 +353,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2017 11:31:18 
-  by <span class="newWikiWord">ottos mops<a href="/nlab/new/ottos+mops">?</a></span>
-  (217.51.21.150)
+  Revised on November  8, 2017 21:57:33 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (67.83.23.132)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Myles+Tierney" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Myles+Tierney/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/Myles+Tierney" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Myles+Tierney" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
